<resources>
    <string name="app_name">Finger-Licken Good</string>
    <string name="c1">•	1 1/2 lbs liempo</string>
    <string name="c2">•	1 piece Knorr Pork Cube</string>
    <string name="c3">•	1 piece purple yam ube, cubed</string>
    <string name="c4">•	1 1/2 cups kalabasa cubed</string>
    <string name="c5">•	12 pieces sitaw sliced in 2 inch pieces</string>
    <string name="c6">•	10 pieces okra</string>
    <string name="c7">•	1 pieces talong sliced</string>
    <string name="c8">•	1 piece ampalaya sliced</string>
    <string name="c9">•	1 piece tomato cubed</string>
    <string name="c10">• 1 piece onion chopped</string>
    <string name="c11">• 3 thumbs ginger crushed</string>
    <string name="c12">• 4 cloves garlic chopped</string>
    <string name="c13">• 3 tablespoons bagoong alamang</string>
    <string name="c14">• 5 cups water for boiling</string>
    <string name="c15">•	3 tablespoons cooking oil</string>
    <string name="c16">•	Ground black pepper to taste</string>
    <string name="c17">
 •	1 lb. pig ears \n
•	1 1/2 lb pork belly\n
•	1 piece onion minced\n
•	3 tablespoons soy sauce \n
•	1/4 teaspoon ground black pepper \n
•	1 knob ginger minced (optional)  \n
•	3 tablespoons chili flakes \n
•	1/2 teaspoon garlic powder \n
•	1 piece lemon or 3 to 5 pieces calamansi \n
•	½ cup butter or margarine \n
•	¼ lb chicken liver \n
•	6 cups water \n
•	3 tablespoons mayonnaise \n
•	1/2 teaspoon salt \n
•	1 piece egg (optional) \n
</string>
    <string name="c18">
1.	Pour the water in a pan and bring to a boil Add salt and pepper. \n\n
2.	Put-in the pig’s ears and pork belly then simmer for 40 minutes to 1 hour (or until tender).\n\n
3.	Remove the boiled ingredients from the pot then drain excess water\n\n
4.	Grill the boiled pig ears and pork belly until done\n\n
5.	Chop the pig ears and pork belly into fine pieces\n\n
6.	In a wide pan, melt the butter or margarine. Add the onions. Cook until onions are soft.\n\n
7.	Put-in the ginger and cook for 2 minutes\n\n
8.	Add the chicken liver. Crush the chicken liver while cooking it in the pan.\n\n
9.	Add the chopped pig ears and pork belly. Cook for 10 to 12 minutes\n\n
10.	Put-in the soy sauce, garlic powder, and chili. Mix well\n\n
11.	Add salt and pepper to taste\n\n
12.	Put-in the mayonnaise and mix with the other ingredients\n\n
13.	Transfer to a serving plate. Top with chopped green onions and raw egg.\n\n
14.	Serve hot. Share and Enjoy (add the lemon or calamansi before eating)

    </string>
    <string name="c19">
•	1 1/2 lbs. pork belly cubed\n
•	1 cup pineapple juice\n
•	10 ounces extra firm tofu cubed\n
•	1/4 cup soy sauce\n
•	2 tablespoons white vinegar\n
•	6 tablespoons brown sugar\n
•	4 tablespoons salted black beans\n
•	1 piece onion chopped\n
•	6 cloves garlic crushed and chopped\n
•	1 piece star anise\n
•	1 cup water\n
•	1/4 teaspoon ground black pepper\n
•	1 1/2 cups cooking oil\n
    </string>
    <string name="c20">
1.	Heat cooking oil in a wok or cooking pot. Add tofu. Deep fry until outer part turns golden brown and crisp. Remove from the wok. Set aside.\n\n
2.	Transfer 3 tablespoons cooking oil used to fry tofu on a clean pan. Heat and saute garlic until it starts to brown. Add onion. Continue sauteing until the later softens.\n\n
3.	Add pork. Cook until the outer part turns light brown.\n\n
4.	Pour soy sauce. Continue sauteing until liquid reduces to half.\n\n
5.	Add pineapple juice and vinegar. Cover and let boil.\n\n
6.	Stir and then add salted black beans. Cover once more. Continue cooking between low to medium heat for 35 minutes.\n\n
7.	Add water and brown sugar. Cook on a covered pan until pork gets very tender. Note: I usually cook it for 40 minutes in low heat.\n\n
8.	Add star anise. Cook for 5 minutes. Remove star anise from the wok.\n\n
9.	Season with ground black pepper and then add fried tofu. Stir and cook for 2 minutes.\n\n
10.	Transfer to a serving bowl. Serve.\n\n
11.	Share and enjoy!
    </string>
    <string name="c21">
•	3 lbs. pork pata sliced\n
•	1 piece Knorr Pork Cube\n
•	3 pieces star anise\n\n
•	3 tablespoons brown sugar\n
•	1/4 cup soy sauce\n
•	1 piece onion chopped\n
•	4 cloves garlic crushed\n
•	1 tablespoon cornstarch\n
•	6 cups water\n
•	3 tablespoons cooking oil\n
•	Salt and ground white pepper to taste
    </string>
    <string name="c22">
1.	Prepare the pata by boiling. Pour water in a pot. Arrange pata slices. Cover and let boil. Continue boiling for 15 minutes while scraping scums and impurities. Discard water afterwards and wash the pork pata once it cools down. Set aside.\n\n
2.	Start cooking Sweet Pata Asado by heating oil in a pan. Sauté onion and garlic until onion softens.\n\n
3.	Add pata slices. Sautee for 1 minute.\n\n
4.	Pour soy sauce and water into the pot. Add star anise. Let boil.\n\n
5.	Add Knorr Pork Cube. Stir and cover. Set the heat between low and medium. Continue boiling until pata tenderizes. Note: make sure to stir once in a while to cook the meat evenly. Note: add more water as needed.\n\n
6.	Add sugar. Stir and cook for 3 minutes.\n\n
7.	Season with ground white pepper and salt.\n\n
8.	Combine cornstarch with 3 tablespoons water. Mix well. Pour mixture into the pot. Stir and cook until sauce thickens.\n\n
9.	Transfer to a serving bowl. Serve. Share and enjoy!\n\n

    </string>
    <string name="c23">
•	2 lbs spare ribs cut into serving pieces\n
•	20 oz. pineapple chunks in can\n
•	2 cups beef broth\n
•	1 piece onion\n
•	5 cloves garlic crushed\n
•	3 tablespoons soy sauce\n
•	2 1/2 tablespoons brown sugar\n
•	3 tablespoons cooking oil\n
•	Salt and ground black pepper to taste\n
    </string>
    <string name="c24">
1.	Separate pineapple juice from the chunks. Combine juice with spare ribs in a bowl. Marinate for at least 1 hour. Remove the juice afterwards and set aside.\n\n
2.	Heat oil in a pan. Saute onion and garlic until onion softens.\n\n
3.	Add marinated ribs. Saute until color turns light brown.\n\n
4.	Pour-in pineapple juice. Add soy sauce and beef broth. Stir. Let the mixture boil.\n\n
5.	Put the pineapple chunks into the pan. Cover and adjust the heat between low to medium. Cook for 1 hour.\n\n
6.	Add brown sugar and season with ground black pepper and salt. Continue cooking until sauce reduces to half.\n\n
7.	Transfer to a serving bowl. Serve with rice. Share and enjoy!
    </string>
    <string name="c25">
 •	2 1/2 lbs pork belly cubed\n
•	10 tablespoons white vinegar\n
•	3 tablespoons soy sauce\n
•	5 cloves garlic crushed\n
•	12 ounces cola drink\n
•	2 teaspoons whole peppercorn\n
•	4 pieces dried bay leaves\n
•	Salt optional\n
•	Water as needed
    </string>
    <string name="c26">
1.	Heat pan. Sear pork belly until it browns and enough oil is extracted. Note: stir the pork continuosly while searing.\n\n
2.	Push the pork on one side of the pan. Add garlic on the open area. Saute garlic for 30 seconds. Mix pork and garlic together. Cook for 1 minute.\n\n
3.	Pour-in soy sauce and vinegar. Let boil. Stir. Cook for 2 minutes.\n\n
4.	Add whole peppercorn and dry bay leaves.\n\n
5.	Add cola drink. Let it boil. Cover the pan. Continue cooking in low heat until pork gets tender. Note: add water if needed.\n\n
6.	Season with salt (optional).\n\n
7.	Transfer to a serving bowl. Serve. Share and enjoy!

    </string>
    <string name="c27">
•	2 lbs. pork belly cubed\n
•	7 tablespoons soy sauce\n
•	4 tablespoons white vinegar\n
•	1 can Sprite or similar soda pop\n
•	1 piece onion minced\n
•	5 pieces dried bay leaves\n
•	1 ½ teaspoons whole peppercorn\n
•	5 cloves garlic crushed\n
•	½ cup water\n
•	3 tablespoons cooking oil
    </string>
    <string name="c28">
1.	In a large bowl, combine soy sauce and Sprite with the pork belly. Mix well. Cover the bowl and refrigerate. Let the pork marinate for at least 6 hours.\n\n
2.	Using a kitchen sieve, drain the marinade out of the bowl. Set it aside.\n\n
3.	Heat oil in a cooking pot\n\n
4.	Once the oil becomes hot, saute garlic until light brown\n\n
5.	Add onion. Continue to saute until soft\n\n
6.	Add pork belly. Stir and cook until light brown\n\n
7.	Pour the marinade (Sprite and soy sauce). Cover the pot and let boil.\n\n
8.	Add whole peppercorn and dried bay leaves. Cover the pot and continue to cook for 30 minutes in medium heat.\n\n
9.	Pour vinegar into the pot. Let the liquid re-boil. Stir. Cover and cook for 25 to 30 minutes. Note: add water if needed.\n\n
10.	Transfer to a serving plate. Serve with rice.\n\n
11.	Share and enjoy!
    </string>
    <string name="c29">
•	1 ½ lbs. pork belly sliced\n
•	½ cup cornstarch\n
•	3 tablespoons fish sauce\n
•	¾ cup cooking oil\n\n
        <i>Sinigang Rice</i>\n
•	22 g Knorr Sinigang sa Sampaloc original mix\n
•	1 ½ cups rice\n
•	8 pieces long green beans chopped\n
•	1 piece onion diced\n
•	1 piece long green pepper sliced\n
•	3 cups water\n
•	Ground black pepper\n
•	½ teaspoon paprika\n
•	3 tablespoons cooking oil\n\n
        <i>Vegetable Tempura</i>\n
•	1 piece tomato sliced\n
•	6 pieces okra\n
•	1 piece eggplant sliced\n
•	1 ½ cups spinach\n
•	1 cup cake flour\n
•	1 piece egg yolk\n
•	1 cup cold water\n
•	¼ cup ice cubes\n
•	2 cups cooking oil

    </string>
    <string name="c30">
1.	Prepare the sinigang broth by boiling water in a cooking pot. Add pork belly. Cover the pot and continue boiling using low to medium heat for 30 minutes. Note: add more water as needed.\n\n
2.	Add Knorr Sinigang sa sampaloc (original mix). Stir. Cover the pot and continue boiling in medium heat for 15 minutes. Remove the pork from the pot and let it cool down.\n\n
3.	Start to cook the sinigang rice by washing the rice. Drain water. Pour sinigang broth into the rice cooker while filtering using a kitchen sieve. Cook until done. Note: you can use a rice cooker, or do the traditional way of cooking rice.\n\n
4.	While the rice is cooking, prep the pork by placing it in a resealable bag. Add fish sauce. Marinate for 15 minutes. Heat oil in a pan and then dredge the pork in cornstarch. Fry each side until it turns golden brown and crispy. Place in a plate lined with paper towel. Set aside.\n\n
5.	Time to stir-fry the rice. Heat oil in a pan. Add onion and cook for 30 seconds. Put the chopped long green beans and continue cooking for 1 ½ minutes. Add sliced long green pepper and cooked rice. Stir-fry for 1 to 2 minutes. Finish by seasoning with ground black pepper and paprika. Set aside.\n\n
6.	Make the vegetable tempura by heating oil to 360F. Combine the batter ingredients starting from the egg yolk and water. Mix well. Add ice cubes and then put-in the cake flour. Mix by holding 4 pieces of chopsticks and mix using a stabbing motion for 30 to 35 seconds. Note: the mixture should be lumpy, not smooth.\n\n
7.	Dredge the vegetables in cake flour and then dip in the batter. Fry each side for 2 to 3 minutes. Note: the spinach should only be fried for not more than 1 minute.\n\n
8.	Arrange the sinigang rice on a serving plate. Top with crispy liempo and serve with vegetable tempura.Share and enjoy!

    </string>
    <string name="c31">
•	2 lbs. pork cubed\n
•	1 piece Knorr Pork Cube\n
•	1 piece potato cubed\n
•	1 piece carrot cubed\n
•	3/4 cup green peas\n
•	1 piece red bell pepper\n
•	8 ounces tomato sauce\n
•	2 cups coconut milk\n
•	3 tablespoons cooking oil\n
•	Salt and ground black pepper to taste
    </string>
</resources>