<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dvegetable2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layoutPicture"
            android:layout_width="match_parent"
            android:layout_height="242dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/vegetable2big" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/layoutName"
            android:layout_marginTop="20dp"
            android:layout_below="@id/layoutPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp">

                <TextView
                    android:text="Crispy Air fried Liempo Pinakbet with Ube"
                    android:layout_marginLeft="3dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="Ingredients:"
                    android:layout_marginLeft="3dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/c1"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"

                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/c2"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"

                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/c3"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"

                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/c4"
                    android:layout_marginLeft="10dp"
                    android:textSize="20sp"

                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/c5"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"

                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="sans-serif-light"

                    android:text="@string/c6"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="sans-serif-light"

                    android:text="@string/c7"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="sans-serif-light"

                    android:text="@string/c8"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="sans-serif-light"

                    android:text="@string/c9"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="sans-serif-light"

                    android:text="@string/c11"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/c11"
                android:textColor="@color/black"
                android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/c12"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/c13"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/c14"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/c15"

                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/c16"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />





                <TextView
                    android:text="Instruction:"
                    android:layout_marginLeft="3dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>


                <TextView
                    android:text="1.	Boil water in a cooking pot."
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"

                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="2.	Add pork belly. Continue boiling for 35 minutes."
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"

                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="3.	Remove pork from the pot. Let it cool down. Note: Save the pork stock (water used to boil the pork). It will be used later."
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"

                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="4.	Rub salt all over the pork belly. Let it stay for 10 minutes."
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"

                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="5.	Put the pork in an air fryer. Air-fry for 18 minutes (or until crispy) per side in 370F. Slice into serving pieces. Set aside."
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"

                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="6.	Heat oil in a pan. Saute onion, garlic, ginger, and tomato."
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"

                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="7.	Once tomato and onion softens, add ube and kalabasa. Saute for 2 minutes."
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"

                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="8.	Pour 1 1/4 cup pork stock into the pot. Let boil."
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"

                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="9.	Add Knorr Pork Cube. Stir."
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"

                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    android:text="10.	Add bagoong alamang. Stir. Cover the pan. Cook for 5 minutes."
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"

                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    android:text="11.	Add eggplant and ampalaya. Cover and cook for 2 minutes."
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"

                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    android:text="12.	Add okra and snake beans. Cover and cook for 7 to 10 minutes."
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"

                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    android:text="13.	Season with ground black pepper. Top with crispy liempo. Serve. Share and enjoy."
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"

                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />



            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>

</androidx.core.widget.NestedScrollView>